--- a/Developpement/static/styles/css/autre/concerts.css
+++ b/Developpement/static/styles/css/autre/concerts.css
@@ -6,11 +6,29 @@
 
 
 #concert-stage{
-  background-color: rgba(250, 250, 207, 0.11);
+  background-color: #fafdef;
   text-align: right;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  padding: 3%;
+  margin: 5%;
+  width: 90%;
+  border-style: solid;
 }
+
+h2{
+  text-align: center;
+  padding: 3%;
+}
+
+#btn-map1{
+  margin-top: 3%;
+  margin-left: 40%;
+}
+
+#btn-map2{
+  margin-top: 3%;
+  margin-right: 40%;
+}
+
 #concert-stage p{
   margin-right: 5%
 }
@@ -19,18 +37,17 @@
 }
 
 
-#concert-quatuor p{
-  margin-left: 5%
-}
 #concert-quatuor h2{
   margin-left: 15%
 }
 
 #concert-quatuor{
-  background-color: rgba(239, 250, 207, 0.11);
+  background-color: #fafdef;
   text-align: left;
-  margin-bottom: 1em;
-  margin-top: 1em;
+  padding: 3%;
+  margin: 5%;
+  width: 90%;
+  border-style: solid;
 }
 .map-container-9,.map-container-10,.map-container-11 {
 overflow:hidden;
@@ -62,4 +79,24 @@ position:absolute;
 }
 .flex-row>img{
   width: 35%;
+}
+
+#two-button{
+    background-color: #fafdef;
+}
+#p-concerts1{
+  text-align: center;
+  padding: 4%;
+  margin-left: -2%;
+}
+#p-concerts2{
+  text-align: center;
+  margin-left: 2%;
+  padding: 4%;
+}
+#h2-1{
+  margin-right: 15%;
+}
+#h2-2{
+  margin-left: 15%;
 }
