--- a/Developpement/templates/contact/contact_mentionsLegales.html
+++ b/Developpement/templates/contact/contact_mentionsLegales.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block main %}
-
+<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/contact/mentionsLegales.css')}}">
 <h1>Mentions Légales</h1>
 
 <h2>Définitions</h2>
 
-
+<div class="contain-p1">
 <p>Client : tout professionnel ou personne physique capable au sens des articles 1123 et suivants du Code civil, ou personne morale, qui visite le Site objet des présentes conditions générales.</p>
 
 <p>Prestations et Services : <strong>http://quatuordivertimento.fr</strong> met à disposition des Clients :</p>
@@ -20,9 +20,9 @@
 <p>Informations personnelles : « Les informations qui permettent, sous quelque forme que ce soit, directement ou non, l'identification des personnes physiques auxquelles elles s'appliquent » (article 4 de la loi n° 78-17 du 6 janvier 1978).</p>
 
 <p>Les termes « données à caractère personnel », « personne concernée », « sous traitant » et « données sensibles » ont le sens défini par le Règlement Général sur la Protection des Données (RGPD : n° 2016-679)</p>
-
+</div>
 <h2>1. Présentation du site internet.</h2>
-
+<div class="contain-p1">
 <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site internet <strong>http://quatuordivertimento.fr</strong> l'identité des différents intervenants dans
   le cadre de sa réalisation et de son suivi:</p>
 
@@ -32,8 +32,10 @@
       <p>Webmaster : Olivier Roussillat – 02 38 84 25 40
         <p>Hébergeur : Online.net – ONLINE SAS BP 438 75366 Paris 0899173788
           <p>Délégué à la protection des données : Olivier Roussillat – olivier.roussillat@wanadoo.fr
-              <h2>2. Conditions générales d’utilisation du site et des services proposés.</h2>
+</div>
 
+              <h2>2. Conditions générales d’utilisation du site et des services proposés.</h2>
+<div class="contain-p1">
               <p>Le Site constitue une œuvre de l’esprit protégée par les dispositions du Code de la Propriété Intellectuelle et des Réglementations Internationales applicables. Le Client ne peut en aucune manière réutiliser, céder ou exploiter pour
                 son propre compte tout ou partie des éléments ou travaux du Site.
 
@@ -43,16 +45,19 @@
                   <p>Ce site internet est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de maintenance technique peut être toutefois décidée par <strong>http://quatuordivertimento.fr</strong>, qui s’efforcera
                     alors de communiquer préalablement aux utilisateurs les dates et heures de l’intervention. Le site web <strong>http://quatuordivertimento.fr</strong> est mis à jour régulièrement par <strong>http://quatuordivertimento.fr</strong>
                     responsable. De la même façon, les mentions légales peuvent être modifiées à tout moment : <p>elles s’imposent néanmoins à l’utilisateur qui est invité à s’y référer le plus souvent possible afin d’en prendre connaissance.
-                      <h2>3. Description des services fournis.</h2>
+</div>
 
+                      <h2>3. Description des services fournis.</h2>
+<div class="contain-p1">
                       <p>Le site internet <strong>http://quatuordivertimento.fr</strong> a pour objet de fournir une information concernant l’ensemble des activités de la société. <strong>http://quatuordivertimento.fr</strong> s’efforce de fournir
                         sur le site <strong>http://quatuordivertimento.fr</strong> des informations aussi précises que possible. Toutefois, il ne pourra être tenu responsable des oublis, des inexactitudes et des carences dans la mise à jour,
                         qu’elles soient de son fait ou du fait des tiers partenaires qui lui fournissent ces informations.
 
                         <p>Toutes les informations indiquées sur le site <strong>http://quatuordivertimento.fr</strong> sont données à titre indicatif, et sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant sur le site <strong>http://quatuordivertimento.fr</strong>
                           ne sont pas exhaustifs. Ils sont donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne.
+</div>
                           <h2>4. Limitations contractuelles sur les données techniques.</h2>
-
+<div class="contain-p1">
                           <p>Le site utilise la technologie JavaScript. Le site Internet ne pourra être tenu responsable de dommages matériels liés à l’utilisation du site. De plus, l’utilisateur du site s’engage à accéder au site en utilisant un
                             matériel récent, ne contenant pas de virus et avec un navigateur de dernière génération mis-à-jour Le site <strong>http://quatuordivertimento.fr</strong> est hébergé chez un prestataire sur le territoire de l’Union
                             Européenne conformément aux dispositions du Règlement Général sur la Protection des Données (RGPD : n° 2016-679)
@@ -63,16 +68,18 @@
 
                               <p><strong>http://quatuordivertimento.fr</strong> et l’hébergeur ne pourront être tenus responsables en cas de dysfonctionnement du réseau Internet, des lignes téléphoniques ou du matériel informatique et de téléphonie
                                 lié notamment à l’encombrement du réseau empêchant l’accès au serveur.
+</div>
                                 <h2>5. Propriété intellectuelle et contrefaçons.</h2>
-
+<div class="contain-p1">
                                 <p><strong>http://quatuordivertimento.fr</strong> est propriétaire des droits de propriété intellectuelle et détient les droits d’usage sur tous les éléments accessibles sur le site internet, notamment les textes,
                                   images, graphismes, logos, vidéos, icônes et sons. Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est
                                   interdite, sauf autorisation écrite préalable de : <strong>http://quatuordivertimento.fr</strong>.
 
                                   <p>Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera considérée comme constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et
                                     suivants du Code de Propriété Intellectuelle.
+</div>
                                     <h2>6. Limitations de responsabilité.</h2>
-
+<div class="contain-p1">
                                     <p><strong>http://quatuordivertimento.fr</strong> agit en tant qu’éditeur du site. <strong>http://quatuordivertimento.fr</strong> est responsable de la qualité et de la véracité du Contenu qu’il publie.
 
                                       <p><strong>http://quatuordivertimento.fr</strong> ne pourra être tenu responsable des dommages directs et indirects causés au matériel de l’utilisateur, lors de l’accès au site internet <strong>http://quatuordivertimento.fr</strong>,
@@ -83,12 +90,14 @@
                                           se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu déposé dans cet espace qui contreviendrait à la législation applicable en France, en particulier aux dispositions relatives à la
                                           protection des données. Le cas échéant, <strong>http://quatuordivertimento.fr</strong> se réserve également la possibilité de mettre en cause la responsabilité civile et/ou pénale de l’utilisateur, notamment
                                           en cas de message à caractère raciste, injurieux, diffamant, ou pornographique, quel que soit le support utilisé (texte, photographie …).
+</div>
                                           <h2>7. Gestion des données personnelles.</h2>
-
+<div class="contain-p1">
                                           <p>Le Client est informé des réglementations concernant la communication marketing, la loi du 21 Juin 2014 pour la confiance dans l’Economie Numérique, la Loi Informatique et Liberté du 06 Août 2004 ainsi
                                             que du Règlement Général sur la Protection des Données (RGPD : n° 2016-679).
+</div>
                                             <h3>7.1 Responsables de la collecte des données personnelles</h3>
-
+<div class="contain-p1">
                                             <p>Pour les Données Personnelles collectées dans le cadre de la création du compte personnel de l’Utilisateur et de sa navigation sur le Site, le responsable du traitement des Données Personnelles est :
                                               Olivier Roussillat. <strong>http://quatuordivertimento.fr</strong>est représenté par Olivier Roussillat, son représentant légal
 
@@ -97,9 +106,9 @@
                                                 traitement de leurs données personnelles et de maintenir un registre des traitements conforme à la réalité. Chaque fois que <strong>http://quatuordivertimento.fr</strong> traite des Données
                                                 Personnelles, <strong>http://quatuordivertimento.fr</strong> prend toutes les mesures raisonnables pour s’assurer de l’exactitude et de la pertinence des Données Personnelles au regard des finalités
                                                 pour lesquelles <strong>http://quatuordivertimento.fr</strong> les traite.
-
+</div>
                                                 <h3>7.2 Finalité des données collectées</h3>
-
+<div class="contain-p1">
 
                                                 <p><strong>http://quatuordivertimento.fr</strong> est susceptible de traiter tout ou partie des données :
 
@@ -114,9 +123,9 @@
                                                           <p> pour mener des campagnes de communication (sms, mail) : numéro de téléphone, adresse email
 
                                                             <p><strong>http://quatuordivertimento.fr</strong> ne commercialise pas vos données personnelles qui sont donc uniquement utilisées par nécessité ou à des fins statistiques et d’analyses.
-
+</div>
                                                               <h3>7.3 Droit d’accès, de rectification et d’opposition</h3>
-
+<div class="contain-p1">
 
                                                               <p>Conformément à la réglementation européenne en vigueur, les Utilisateurs de <strong>http://quatuordivertimento.fr</strong> disposent des droits suivants :
 
@@ -153,9 +162,9 @@
                                                                                       <p>Les demandes de suppression de Données Personnelles seront soumises aux obligations qui sont imposées à <strong>http://quatuordivertimento.fr</strong> par la
                                                                                         loi, notamment en matière de conservation ou d’archivage des documents. Enfin, les Utilisateurs de <strong>http://quatuordivertimento.fr</strong> peuvent déposer
                                                                                         une réclamation auprès des autorités de contrôle, et notamment de la CNIL (https://www.cnil.fr/fr/plaintes).
-
+</div>
                                                                                         <h3>7.4 Non-communication des données personnelles</h3>
-
+<div class="contain-p1">
                                                                                         <p><strong>http://quatuordivertimento.fr</strong> s’interdit de traiter, héberger ou transférer les Informations collectées sur ses Clients vers un pays situé en
                                                                                           dehors de l’Union européenne ou reconnu comme « non adéquat » par la Commission européenne sans en informer préalablement le client. Pour autant, <strong>http://quatuordivertimento.fr</strong>
                                                                                           reste libre du choix de ses sous-traitants techniques et commerciaux à la condition qu’il présentent les garanties suffisantes au regard des exigences du
@@ -172,8 +181,9 @@
 
                                                                                               <p>Dans la limite de leurs attributions respectives et pour les finalités rappelées ci-dessus, les principales personnes susceptibles d’avoir accès aux
                                                                                                 données des Utilisateurs de <strong>http://quatuordivertimento.fr</strong> sont principalement les agents de notre service client.
+</div>
                                                                                                 <h2>8. Notification d’incident</h2>
-
+<div class="contain-p1">
                                                                                                 <p>Quels que soient les efforts fournis, aucune méthode de transmission sur Internet et aucune méthode de stockage électronique n'est complètement sûre.
                                                                                                   Nous ne pouvons en conséquence pas garantir une sécurité absolue. Si nous prenions connaissance d'une brèche de la sécurité, nous avertirions les
                                                                                                   utilisateurs concernés afin qu'ils puissent prendre les mesures appropriées. Nos procédures de notification d’incident tiennent compte de nos
@@ -185,26 +195,27 @@
                                                                                                     échangée, transférée, cédée ou vendue sur un support quelconque à des tiers. Seule l'hypothèse du rachat de <strong>http://quatuordivertimento.fr</strong>
                                                                                                     et de ses droits permettrait la transmission des dites informations à l'éventuel acquéreur qui serait à son tour tenu de la même obligation de
                                                                                                     conservation et de modification des données vis à vis de l'utilisateur du site <strong>http://quatuordivertimento.fr</strong>.
+</div>
                                                                                                     <h3>Sécurité</h3>
-
+<div class="contain-p1">
                                                                                                     <p>Pour assurer la sécurité et la confidentialité des Données Personnelles et des Données Personnelles de Santé, <strong>http://quatuordivertimento.fr</strong>
                                                                                                       utilise des réseaux protégés par des dispositifs standards tels que par pare-feu, la pseudonymisation, l’encryption et mot de passe.
 
 
                                                                                                       <p>Lors du traitement des Données Personnelles, <strong>http://quatuordivertimento.fr</strong>prend toutes les mesures raisonnables visant à les
                                                                                                         protéger contre toute perte, utilisation détournée, accès non autorisé, divulgation, altération ou destruction.
-
+</div>
                                                                                                         <h2>9. Liens hypertextes « cookies » et balises (“tags”) internet</h2>
-
+<div class="contain-p1">
                                                                                                         <p>Le site <strong>http://quatuordivertimento.fr</strong> contient un certain nombre de liens hypertextes vers d’autres sites, mis en place avec
                                                                                                           l’autorisation de <strong>http://quatuordivertimento.fr</strong>. Cependant, <strong>http://quatuordivertimento.fr</strong> n’a pas la
                                                                                                           possibilité de vérifier le contenu des sites ainsi visités, et n’assumera en conséquence aucune responsabilité de ce fait.
                                                                                                           <p>Sauf si vous décidez de désactiver les cookies, vous acceptez que le site puisse les utiliser. Vous pouvez à tout moment désactiver ces
                                                                                                             cookies et ce gratuitement à partir des possibilités de désactivation qui vous sont offertes et rappelées ci-après, sachant que cela peut
                                                                                                             réduire ou empêcher l’accessibilité à tout ou partie des Services proposés par le site.
-
+</div>
                                                                                                             <h3>9.1. « COOKIES »</h3>
-
+<div class="contain-p1">
 
                                                                                                             <p>Un « cookie » est un petit fichier d’information envoyé sur le navigateur de l’Utilisateur et enregistré au sein du terminal de
                                                                                                               l’Utilisateur (ex : ordinateur, smartphone), (ci-après « Cookies »). Ce fichier comprend des informations telles que le nom de domaine de
@@ -278,9 +289,9 @@
                                                                                                                                       sites Internet grâce à ces balises, constituer des rapports sur l’activité du Site à l’attention de <strong>http://quatuordivertimento.fr</strong>,
                                                                                                                                       et fournir d’autres services relatifs à l’utilisation de celui-ci et d’Internet.
 
-
+</div>
                                                                                                                                       <h2>10. Droit applicable et attribution de juridiction.</h2>
-
+<div class="contain-p1">
                                                                                                                                       <p>Tout litige en relation avec l’utilisation du site <strong>http://quatuordivertimento.fr</strong> est soumis au
                                                                                                                                         droit français. En dehors des cas où la loi ne le permet pas, il est fait attribution exclusive de juridiction
                                                                                                                                         aux tribunaux compétents de Orleans
