amélioration page plaquettes contact

--- a/Developpement/static/styles/css/contact/plaquette.css
+++ b/Developpement/static/styles/css/contact/plaquette.css
@@ -16,3 +16,20 @@
 .liens{
   text-align: center;
 }
+
+.center{
+  background-color: #fafdef;
+  width: 90%;
+  margin-left: 5%;
+  margin-bottom: 5%;
+  margin-top: 3%;
+  padding: 5%;
+  border-radius: 25px;
+}
+#down{
+  color: black;
+}
+
+#contain-link-glyph{
+  padding-top: 4%;
+}
