--- a/Developpement/templates/stage/presentationStage.html
+++ b/Developpement/templates/stage/presentationStage.html
@@ -3,24 +3,20 @@
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/presentationStage.css')}}">
 <div class="stagiaire-annee">
   <h2>Stages</h2>
-  <div class="stage">
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-    <p>Intitule</p>
-
+  <div>
     <p>{{ stage.intituleSt }}</p>
-    <p>{{ stage.idRep }}</p>
-    <p>{{ stage.dateDebSt }}</p>
-    <p>{{ stage.dateFinSt }}</p>
+    <p>{{ stage.prixSt }}</p>
+    <div>
+      <p>{{ stage.dateDebSt }}</p>
+      <p>{{ stage.dateFinSt }}</p>
+    </div>
+    <div>
+      <p>{{ stage.idLieu }}</p>
+      <p>{{ stage.idLieu }}</p>
+      <p>{{ stage.idLieu }}</p>
+    </div>
+    <div>
+    </div>
     <p>{{ stage.descSt }}</p>
     <p>{{ stage.nivRequisSt }}</p>
     <p>{{ stage.idLieu }}</p>
@@ -29,6 +25,7 @@
     <p>{{ stage.nbPlaceSt }}</p>
     <p>{{ stage.prixSt }}</p>
     <p>{{ stage.vetSt }}</p>
+
     <a href="/stage/inscription/" class="btn btn-default">
       <span class="glyphicon glyphicon-pencil"></span>
     </a>
