--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -62,7 +62,8 @@ body{
 .dropdown:hover .dropdown-menu {
   display: block;
 }
-
-#nomUtil{
-  display: flex;
+#connect{
+  margin-top: 7%;
+  margin-left: -30%;
+  color: black;
 }
