--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -66,4 +66,10 @@ body{
   margin-top: 7%;
   margin-left: -30%;
   color: black;
+  text-decoration: none;
+}
+#connect:hover{
+  background-color: lightgrey;
+  color: black;
+  text-decoration: none;
 }
