--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -65,11 +65,14 @@ body{
 #connect{
   margin-top: 7%;
   margin-left: -30%;
-  color: black;
-  text-decoration: none;
 }
 #connect:hover{
   background-color: lightgrey;
   color: black;
   text-decoration: none;
+  height: 3.4vw;
+}
+#connect a{
+  text-decoration: none;
+  color: black;
 }
