Presentation des stages. Action si pas de stages

--- a/Developpement/templates/administration/administration_gestionStages.html
+++ b/Developpement/templates/administration/administration_gestionStages.html
@@ -8,7 +8,7 @@
     <h2>Stages</h2>
 
     <div class="stagiaire-individu table-responsive">
-      {% if variable|length %}
+      {% if stages|length %}
       <table  class="table table-bordered">
         <thead>
           <tr>
