--- a/Developpement/templates/stage/stage_presentation.html
+++ b/Developpement/templates/stage/stage_presentation.html
@@ -89,6 +89,8 @@
       </div>
       <div class="recherche"><button type="button" class="btn btn-default" data-toggle="collapse" data-target=".tableau">Rechercher les stages disponibles</button></div>
       <div class="container_tab">
+        {% if stages|length %}
+
         <div class="tableau">
             <table class="table table-striped">
               <thead>
@@ -109,6 +111,9 @@
               </tbody>
             </table>
           </div>
+          {% else %}
+          <h2>Il n'y a aucun stage pour le moment</h2>
+          {% endif %}
         </div>
       </div>
     </div>
