--- a/Developpement/templates/administration/administration_mailing.html
+++ b/Developpement/templates/administration/administration_mailing.html
@@ -38,6 +38,7 @@
 <div class="liens">
 <h1>Messagerie</h1>
 </div>
+<div class="message">
 <form class="form" id="form_login"role="form" method="POST" action="{{ url_for('administration_mailing') }}">
   <div class="d-inline">
   <div class="form-group">
@@ -62,10 +63,10 @@
 
   <div class="form-group">
     <label for="contenuMessage" class="col-sm-3 control-label">{{admin_contactForm.contenuMessage.label}}</label>
-    <div class="col-sm-3">{{ admin_contactForm.contenuMessage(size=100, class="form-control textarea", placeholder="Contenu du mail")}}</div>
+    <div class="col-sm-3">{{ admin_contactForm.contenuMessage(size=100, class="form-control textarea", placeholder="Contenu du mail", style="resize: none;",rows="11",cols="20" )}}</div>
   </div>
-  <br>
-  <br>
+</div>
+
   <div class="form-group grand">
     <label for="pjMessage" class="col-sm-3 control-label">{{admin_contactForm.pjMessage.label}}</label>
     <div class="col-sm-3">{{ admin_contactForm.pjMessage(size=50, class="form-control")}}</div>
