--- a/Developpement/static/styles/css/autre/liens.css
+++ b/Developpement/static/styles/css/autre/liens.css
@@ -1,6 +1,8 @@
 #hliens{
   text-align: center;
-  font-size: 30px
+  font-size: 30px;
+  padding: 3%;
+  margin-top: -3%;
 }
 
 #logo-liens{
@@ -13,7 +15,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #fafdef;
+  width: 50%;
+  margin-left: 25%;
+  margin-bottom: 4%;
+  padding: 2%;
+  border-radius: 25px;
 
+}
+p{
+  color: black;
 }
 
 .liste-partenaires{
@@ -22,6 +33,13 @@
   align-items: center;
   justify-content: center;
 
+}
+.liste-partenaires div{
+  padding: 5%;
+}
+
+.liste-partenaires div p{
+  padding: 2%;
 }
 
 #logo-partenaires{
@@ -35,18 +53,24 @@
 
 }
 
-.liste-partenaires div{
-  margin-left: 5%;
-  margin-right: 5%;
+.underline1{
+  width: 16%;
+  margin-top: -6%;
 }
-
 .partenaires{
-  margin-bottom: 5%
+  margin-bottom: 5%;
+  margin-top: 3%;
+  background-color: #fafdef;
+  width: 70%;
+  margin-left: 15%;
+  border-radius: 25px;
+
 }
 
 .underline2{
   width:16%;
-  margin-top:-1.5%;
+  margin-top:-6%;
+  margin-left: 42%;
 }
 .liens{
   text-align: center;
