--- a/Developpement/templates/other/page_liens.html
+++ b/Developpement/templates/other/page_liens.html
@@ -6,11 +6,11 @@
 <br>
 <div class="liens">
   <h2 id="hliens">Réseaux sociaux</h2>
-  <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
+  <img class="underline1" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
   <br>
   <div class="liste-logo">
     <a href="https://fr-fr.facebook.com/QuatuorDivertimento45/">
-      <img src="{{ url_for('static',filename='img/logo-facebook.png') }}" alt="facebook logo" id="logo-liens">
+      <img src="{{ url_for('static',filename='img/logo-facebook.png') }}" alt="facebook logo" id="logo-liens"><br><br>
       <strong>
         <p>Notre page facebook</p>
       </strong>
@@ -18,34 +18,9 @@
 
   </div>
 </div>
-
-<div class="partenaires liens">
   <h2 id="hliens">Nos partenaires</h2>
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
-  <br>
-  <div class="liste-partenaires">
-    <div>
-      <a href="https://clarenpic.blog4ever.com/">
-        <img src="{{ url_for('static',filename='img/logo-clarinette-picardie.png') }}" alt="picardie clarinette logo" id="logo-partenaires">
-        <strong>
-          <p>Club de Clarinette en Picardie</p>
-        </strong>
-      </a>
-    </div>
-    <div>
-      <a href="http://www.regioncentre-valdeloire.fr/">
-        <img src="{{ url_for('static',filename='img/logo-region-centre.png') }}" alt="picardie clarinette logo" id="logo-partenaires">
-        <strong>
-          <p>Region Centre Val de Loire</p>
-        </strong>
-      </a>
-    </div>
-  </div>
-</div>
-
 <div class="partenaires liens">
-  <h2 id="hliens">Nos magasins conseillés</h2>
-  <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
   <br>
   <div class="liste-partenaires">
     <div>
@@ -66,6 +41,26 @@
       </a>
       <p>Fabricant d'accessoires et de partitions</p>
     </div>
+  </div>
+  <div class="liste-partenaires">
+    <div>
+    <a href="http://cyrillemercadier.com/">
+      <img src="{{ url_for('static',filename='img/Logo Cyrille Mercadier-page-001.jpg') }}" alt="Buffet Crampon" id="logo-partenaires">
+      <strong>
+        <p>Cyrille Mercadier Clarinette</p>
+      </strong>
+    </a>
+    <p>Boutique de clarinette à Paris</p>
+  </div>
+  <div>
+    <a href="https://www.atelierdesvents.fr/">
+      <img src="{{ url_for('static',filename='img/Logo atelier des vents.JPG') }}" alt="Buffet Crampon" id="logo-partenaires">
+      <strong>
+        <p>L'Atelier des Vents</p>
+      </strong>
+    </a>
+    <p>Magasin de clarinette en ligne</p>
+  </div>
   </div>
 </div>
 
