--- a/Developpement/static/styles/css/base.css
+++ b/Developpement/static/styles/css/base.css
@@ -62,17 +62,13 @@ body{
 .dropdown:hover .dropdown-menu {
   display: block;
 }
-#connect{
-  margin-top: 7%;
-  margin-left: -30%;
-}
-#connect:hover{
-  background-color: lightgrey;
-  color: black;
-  text-decoration: none;
-  height: 3.4vw;
-}
 #connect a{
+  margin-top: 8%;
+  margin-left: -30%;
+  color: black;
+}
+#connect a:hover{
   text-decoration: none;
+  background-color: lightgrey;
   color: black;
 }
