--- a/Developpement/templates/stage/stage_repertoire.html
+++ b/Developpement/templates/stage/stage_repertoire.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_repertoire.css')}}">
-
+<h1>Répertoire</h1>
 <h2>Stage 2019</h2>
 <table class="table table-striped">
   <thead>
