--- a/Developpement/templates/stage/stage_paiement.html
+++ b/Developpement/templates/stage/stage_paiement.html
@@ -2,4 +2,42 @@
 {% block main %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_paiement.css')}}">
 
+<h1>Page de paiement</h1>
+
+<h2>Paiement effectué</h2>
+<table>
+  <thead>
+    <th>Numero de paiement</th>
+    <th>Date de paiment</th>
+    <th>Montant</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>150</td>
+      <td>14/02/03</td>
+      <td>130€</td>
+    </tr>
+  </tbody>
+</table>
+
+<h2>Paiement à faire</h2>
+<table>
+  <thead>
+    <th>Numero de paiement</th>
+    <th>Montant</th>
+    <th>Renvoyer l'url de paiement</th>
+  </thead>
+  <tbody>
+    <tr>
+      <td>150</td>
+      <td>130€</td>
+      <td>
+        <form class="" action="index.html" method="post">
+
+        </form>
+       </td>
+    </tr>
+  </tbody>
+</table>
+
 {% endblock %}
