--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -51,7 +51,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle sommaire" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color: black">Stage <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/stage/presentation/">Présentation</a></li>
+                <li><a href="/stage/presentation/">Présentation/Inscription</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="/stage/programmes/">Programmes</a></li>
                 <li role="separator" class="divider"></li>
