reglage css navbar

--- a/Developpement/templates/contact/contact_ficheTechnique.html
+++ b/Developpement/templates/contact/contact_ficheTechnique.html
@@ -10,7 +10,7 @@
     <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
     <br>
     <br>
-    <a href="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" download="ficheTechnique.pdf"><span class="glyphicon glyphicon-save"></span> Télécharger la fiche technique</a>
+    <a id="lien-a" href="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" download="ficheTechnique.pdf"><span class="glyphicon glyphicon-save"></span> Télécharger la fiche technique</a>
   </div>
 </div>
 <br>
