--- a/Developpement/templates/stage/stage_souvenirs.html
+++ b/Developpement/templates/stage/stage_souvenirs.html
@@ -33,9 +33,6 @@ function m(){
 
 <body onLoad="m()">
   <h1>Souvenirs</h1>
-  <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
-
-  <label for="anneeSouv">{{souvForm.anneeSouv.label}}</label>
   <div class="form-group">{{ souvForm.anneeSouv.label(class="form-control", placeholder="Choix de l'année")}}
     <select id="annee" class="form-control">
       <option>{{souvForm.anneeSouv.choices[0][1]}}</option>
@@ -44,52 +41,53 @@ function m(){
     </select>
   </div>
 
-  <div id="2015">
+  <div class="souv" id="2017">
     <table>
         <thead>
             <tr>
-                <th colspanAnnee="1">Stage 2015</th>
+                <th colspan="2">Stage 2017</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test2"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test2"></td>
             </tr>
             <tr>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test"></td>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test2"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test2"></td>
             </tr>
         </tbody>
     </table>
   </div>
 
-  <div id="2016">
+  <div class="souv" id="2016">
     <table>
         <thead>
             <tr>
-                <th colspan="1">Stage 2016</th>
+                <th colspan="2">Stage 2016</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test2"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree2.jpg') }}" alt="test2"></td>
             </tr>
         </tbody>
     </table>
   </div>
 
-  <div id="2017">
+  <div class="souv" id="2015">
     <table>
         <thead>
             <tr>
-                <th colspan="1">Stage 2017</th>
+                <th colspan="2">Stage 2015</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td><img class="test" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
+                <td><img class="test img-thumbnail img-rounded" src="{{ url_for('static',filename='img/entree1.jpg') }}" alt="test"></td>
             </tr>
         </tbody>
     </table>
