--- a/Developpement/static/styles/css/stage/stage_souvenirs.css
+++ b/Developpement/static/styles/css/stage/stage_souvenirs.css
@@ -3,3 +3,29 @@
   margin-left: 39%;
   margin-top:-1.5%;
 }
+th{
+  text-align: center;
+  padding-bottom: 2%;
+}
+table{
+  margin-left: 25%;
+  margin-right: 25%;
+  width: 50%;
+  padding-bottom: 10%;
+}
+.img-thumbnail{
+}
+.form-group{
+  margin-top: -2%;
+}
+.souv{
+  background-color: #fafdef;
+  border-color: black;
+  border-style: solid;
+  border-width: thin;
+  padding: 2%;
+  padding-bottom: 3%;
+  margin-bottom: 2%;
+  margin-left: 1%;
+  margin-right: 1%;
+}
