--- a/Developpement/static/styles/css/stage/stage_inscription.css
+++ b/Developpement/static/styles/css/stage/stage_inscription.css
@@ -29,14 +29,47 @@ label{
 .bigcontainer2{
     font-family: 'aaa';
     margin-top:1%;
-    margin-left: 26.0%;
+    margin-left: 38%;
     text-align: center;
 }
 .form-group{
     width:50%;
 }
+.bigcontainer2 p{
+  width: 60%;
+}
+#contain-h5{
+  margin-left: -33%;
+  padding: 2%;
+}
+#contain-h52{
+  padding: 2%;
+  margin-left: -7%;
+}
+#contain-lien a{
+  margin-left: -28%;
+}
+#contain-checkbox{
+  margin-right: 60%;
+}
+#contain-stagiaire{
+    background-color: #fafdef;
+    padding: 3%;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 25px;
+    margin-bottom: 3%;
+}
+#contain-stagiaire h4{
+    margin-bottom: 3%;
+}
+#contain-stagiaire .form-group{
+    margin-left: -8%;
+}
+
 #submit{
     margin-top:1.5%;
+    margin-left: -27%;
 }
 .underline{
     width:22%;
@@ -56,17 +89,14 @@ label{
     text-align: justify;
 }
 .checkbox{
-    width: 90%;
-    margin-left: 4%;
+    width: 200%;
+    margin-left: -50%;
 }
 #check{
     width:3.5%;
-    margin-top:-10%;
+    margin-top:-12%;
 }
 #check2{
     margin-top: -10%;
     width:3.5%;
-}
-#reste{
-  margin-left: 30%;
 }
