--- a/Developpement/templates/stage/stage_inscription_basic.html
+++ b/Developpement/templates/stage/stage_inscription_basic.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
 <!-- Creation d'un boite de texte qui change automatiquement le contenue d'une balise <p>  -->
-<link rel="stylesheet" href="{{ url_for('static',filename='styles/css/base.css')}}">
+
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/stage/stage_inscription.css')}}">
 
 <h1>Inscription à un Stage</h1>
@@ -10,8 +10,8 @@
     <h3 id="h3title">Bulletin d'Inscription</h3>
     <img class="underline" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
+<div id="contain-stagiaire">
 <h4>Stagiaire</h4>
-<img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
 <div class="bigcontainer">
   <div class="container" id="container1">
     <div class="row">
@@ -32,8 +32,17 @@
                 {{ persForm.dateNPers(size=50, class_="form-control", type="date", id="date")}}
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div id="contain-stagiaire">
           <h4>Contact</h4>
-          <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
+          <div class="bigcontainer">
+            <div class="container" id="container1">
+              <div class="row">
+                <div class="col-sm-11">
           <div class="form-group">
             <label for="tel1Pers">{{ persForm.tel1Pers.label }}</label>
             <div>
@@ -44,10 +53,19 @@
             <label for="mailPers">{{ persForm.mailPers.label }}</label>
             <div>
                 {{ persForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="contain-stagiaire">
           <h4>Adresse</h4>
-          <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
+          <div class="bigcontainer">
+            <div class="container" id="container1">
+              <div class="row">
+                <div class="col-sm-11">
           <div class="form-group">
             <label for="adrResp">{{ lieuForm.adrLieu.label }}</label>
             <div>{{ lieuForm.adrLieu(size=100, class_="form-control",placeholder="16 Rue Victor Hugo")}}</div>
@@ -60,8 +78,17 @@
             <label for="villeResp">{{ lieuForm.villeLieu.label }}</label>
             <div>{{ lieuForm.villeLieu(size=50, class_="form-control", placeholder="Orleans")}}</div>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+  <div id="contain-stagiaire">
           <h4>Expérience</h4>
-          <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
+          <div class="bigcontainer">
+            <div class="container" id="container1">
+              <div class="row">
+                <div class="col-sm-11">
           <div class="form-group">
             <label for="ecole">{{ persForm.ecole.label }}</label>
             <div>{{ persForm.ecole(size=50, class_="form-control",placeholder="Conservatoire")}}</div>
@@ -78,15 +105,21 @@
       </div>
     </div>
   </div>
+</div>
+  <div id="contain-stagiaire">
   <div id="reste">
-    <h4>Autorisations</h4>
-    <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
+    <h4 id = "autor">Autorisations</h4>
+    <div class="bigcontainer2">
+      <div class="container" id="container1">
+        <div class="row">
+          <div class="col-sm-11">
       <div>
         <p class="p">ATTENTION Conformément à la loi n° 2002-303 du 4 mars 2002 relative aux droits des malades : En cas d’urgence, un élève accidenté ou malade est orienté et transporté par les services de secours d’urgence vers l’hôpital le mieux adapté. La famille est immédiatement avertie par nos soins. Un élève mineur ne peut sortir de l’hôpital qu’accompagné de sa famille. Si vous le souhaitez, dans l'intérêt de votre enfant, vous pouvez prendre rendez-vous avec les responsables de l’association pour nous expliquer un éventuel cadre clinique particulier, ou la prise d'un
                         traitement nécessitant notre vigilance.
         </p>
       </div>
-      <h5>Autorise(nt) l'association DIVERTIMENTO:</h5>
+      <h5 id="contain-h5">Autorise(nt) l'association DIVERTIMENTO:</h5>
+      <div id="contain-checkbox">
       <div class="form-group">
         <div class="checkbox">
           <label for="autorAudioPrive">{{ autorForm.autorAudioPrive.label }}
@@ -99,7 +132,7 @@
           {{ autorForm.autorImag(class_="form-control",type="checkbox", value="",id="check")}}
         </div><br>
       </div>
-      <h5>Autorise(nt) la diffusion:</h5>
+      <h5 id="contain-h52">Autorise(nt) la diffusion:</h5>
       <div class="form-group">
         <div class="checkbox">
           <label for="autorAudioPub">{{ autorForm.autorAudioPub.label }}
@@ -112,20 +145,25 @@
           {{ autorForm.autorImagSite(class_="form-control",type="checkbox", value="",id="check")}}
         </div>
       </div>
+    </div>
       <p class="p">Dans le cadre des activités menées au sein du stage et pendant les concerts, des photographies ou des vidéos sur lesquelles vous apparaîtrez pourront être réalisées.
           La loi relative au droit à l’image nous oblige à vous demander une autorisation écrite, non seulement pour les prises de son et de vue mais aussi pour la diffusion de ces vidéos et de ces images sur un support défini. Ces enregistrements seront réalisés par les membres de l’association, d’autres participants au stage ou une personne extérieure identifiée par l’association DIVERTIMENTO. De courts extraits sonores seront accessible en partie public du site du Quatuor de clarinettes DIVERTIMENTO, les vidéos et photographies ne seront accessibles qu’en partie « membres » du même site, avec un mot de passe attribué à l’inscription du stagiaire. Conformément à la loi, vous pouvez à tout moment vérifier l’usage qui est fait des données vous concernant et vous disposez du droit de retrait de ces données si vous le jugez utile.
       </p>
       <div id="form">
-        <h5>Télécharger les formulaires</h5><br>
-        <div class=form-group>
+        <h5 id="contain-h5">Télécharger les formulaires</h5><br>
+        <div id="contain-lien" class=form-group>
           <a download="inscription.pdf" href="{{ url_for('static',filename='fichier_statique/inscription.pdf')}}">Télécharger le Bulletin d'inscription</a><br>
           <a download="autorisation.pdf" href="{{ url_for('static',filename='fichier_statique/autorisation.pdf')}}">Télécharger l'autorisation de diffusion</a>
-        </div>
+          </div>
         <div class=form-group>
           <input type="submit" id="submit" class="btn btn-default" value="Continuer">
         </div>
       </div>
     </div>
-
+  </div>
+</div>
+</div>
+</div>
+</div>
 
 {% endblock %}
