css admin mailing

--- a/Developpement/static/styles/css/administration/administration_mailing.css
+++ b/Developpement/static/styles/css/administration/administration_mailing.css
@@ -1,14 +1,14 @@
-br {
-  margin-bottom: 2%
-}
-
 .message{
-  height: 30em;
-  width: 100em;
+  background-color: #fafdef;
+  display: flex;
+  flex-wrap: nowrap;
+  text-align: center;
+  margin-left: 10%;
+  border-radius: 25px;
+  padding: 3%;
+  width: 80%;
+  margin-bottom: 3%;
 }
-
-textarea{
-height: auto;
-width: auto;
-
+.form{
+  margin-left: 30%;
 }
