--- a/Developpement/templates/administration/administration_mailing.html
+++ b/Developpement/templates/administration/administration_mailing.html
@@ -40,45 +40,39 @@
 </div>
 <div class="message">
 <form class="form" id="form_login"role="form" method="POST" action="{{ url_for('administration_mailing') }}">
-  <div class="d-inline">
   <div class="form-group">
-    <label for="objetMessage" id="select2" class="col-sm-3 control-label">{{admin_contactForm.objetMessage.label}}</label>
-    <div class="col-sm-3">{{ admin_contactForm.objetMessage(class="form-control")}}</div>
+    <label for="objetMessage" id="select2">{{admin_contactForm.objetMessage.label}}</label>
+    <div>{{ admin_contactForm.objetMessage(class="form-control")}}</div>
   </div>
   <div class="form-group" id="hidden2" style="display:none">
-    <div class="col-sm-3">{{ admin_contactForm.autrobjMessage(size=50, class="form-control", placeholder="Objet autre")}}</div>
+    <div>{{ admin_contactForm.autrobjMessage(size=50, class="form-control", placeholder="Objet autre")}}</div>
   </div>
-</div>
   <br>
-  <div class="d-inline">
     <div class="form-group">
-      <label for="destMessage" id="select" class="col-sm-3 control-label">{{admin_contactForm.destMessage.label}}</label>
-      <div class="col-sm-3">{{ admin_contactForm.destMessage(class="form-control", placeholder="Destinataire du mail",id="select")}}</div>
+      <label for="destMessage" id="select">{{admin_contactForm.destMessage.label}}</label>
+      <div>{{ admin_contactForm.destMessage(class="form-control", placeholder="Destinataire du mail",id="select")}}</div>
     </div>
     <div class="form-group" id="hidden" style="display:none">
-      <div class="col-sm-3">{{ admin_contactForm.autrDestMessage(size=50, class="form-control", placeholder="Adresse autre")}}</div>
+      <div>{{ admin_contactForm.autrDestMessage(size=50, class="form-control", placeholder="Adresse autre")}}</div>
     </div>
-  </div>
   <br>
 
   <div class="form-group">
-    <label for="contenuMessage" class="col-sm-3 control-label">{{admin_contactForm.contenuMessage.label}}</label>
-    <div class="col-sm-3">{{ admin_contactForm.contenuMessage(size=100, class="form-control textarea", placeholder="Contenu du mail", style="resize: none;",rows="11",cols="20" )}}</div>
+    <label for="contenuMessage">{{admin_contactForm.contenuMessage.label}}</label>
+    <div>{{ admin_contactForm.contenuMessage(size=100, class="form-control textarea", placeholder="Contenu du mail", style="resize: none;",rows="11",cols="20" )}}</div>
   </div>
-</div>
 
-  <div class="form-group grand">
-    <label for="pjMessage" class="col-sm-3 control-label">{{admin_contactForm.pjMessage.label}}</label>
-    <div class="col-sm-3">{{ admin_contactForm.pjMessage(size=50, class="form-control")}}</div>
+  <div class="form-group">
+    <label for="pjMessage">{{admin_contactForm.pjMessage.label}}</label>
+    <div><span class="glyphicon glyphicon-paper-clip">{{ admin_contactForm.pjMessage(size=50, class="form-control")}}</span></div>
   </div>
   <br>
-</form>
-<div class="form-group">
-  <div class="col-sm-offset-3 col-sm-3">
-    <button type="submit" class="btn btn-default">Envoyer mail</button>
-  </div>
-</div>
 
+<div class="form-group">
+    <button type="submit" class="btn btn-default">Envoyer mail</button>
+</div>
+</form>
+</div>
 
 
 
